// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane X3 — batch F: the screens are unchanged on the iPhone (golden, iOS 390) /client-view 1`] = `
{
  "lines": 301,
  "modals": 4,
  "sha256": "667d561612a7efe29281013ccc091ba23ea14fdab447350767b8ab76652a8021",
}
`;

exports[`lane X3 — batch F: the screens are unchanged on the iPhone (golden, iOS 390) /client-view?portalId=44444444-4444-4444-8444-444444444444 1`] = `
{
  "lines": 595,
  "modals": 7,
  "sha256": "3dbebc52fc90fea5f8c179a900cf6c7aa35b226d1a16bf671024a6e4002e9176",
}
`;

exports[`lane X3 — batch F: the screens are unchanged on the iPhone (golden, iOS 390) /managed-property 1`] = `
{
  "lines": 320,
  "modals": 4,
  "sha256": "79fd07e0a1c1902c502d29e0d2e6830ae1db7fc424c891cbcabdac602e2dadf1",
}
`;

exports[`lane X3 — batch F: the screens are unchanged on the iPhone (golden, iOS 390) /oac-meeting 1`] = `
{
  "lines": 383,
  "modals": 5,
  "sha256": "3ae143a929b1c9e6604b096471958f7be295c0ce253668473f6a06b6e8827d66",
}
`;

exports[`lane X3 — batch F: the screens are unchanged on the iPhone (golden, iOS 390) /shared-schedule 1`] = `
{
  "lines": 303,
  "modals": 4,
  "sha256": "95123fafb9e4aa862c5f599d3d388d557269127e764cfaadfb0d3295e76cd6f2",
}
`;

exports[`lane X3 — batch F: the screens are unchanged on the iPhone (golden, iOS 390) /work-order 1`] = `
{
  "lines": 320,
  "modals": 4,
  "sha256": "c938d62c76f2ab1e1fa24e0ef051c329e1d81595bd84b7b07e1617695b7d8955",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) ai-profile-setup — dark 1`] = `
{
  "lines": 118,
  "modals": 1,
  "sha256": "4c168bda02a5a54c5c82da89ac5c39fe107ea4b032e6c4ca4e2afb9bdd2ed12c",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) ai-profile-setup — light 1`] = `
{
  "lines": 118,
  "modals": 1,
  "sha256": "16fbc95cca0959d279148d2c5364104a7f1f877eaf9f6bdb65e5c50e81a609bb",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) ai-project-report — dark 1`] = `
{
  "lines": 34,
  "modals": 1,
  "sha256": "1abfff6a5befa109e69cd9f040e90d1c216e64606c8733967730cb8e76c82fcf",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) ai-project-report — light 1`] = `
{
  "lines": 34,
  "modals": 1,
  "sha256": "708a3dfb2bc71f99b3f2031caddac4ac2f2d70abdef7dbbb232e7da2abd3ec7a",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) ai-quick-estimate — dark 1`] = `
{
  "lines": 207,
  "modals": 2,
  "sha256": "f9bb65613f92b960d2d94dcc2ee4f079e48ed0987289ed16fabe541369737230",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) ai-quick-estimate — light 1`] = `
{
  "lines": 207,
  "modals": 2,
  "sha256": "f6b4b4cceb4b89acf17039720f2389316ab8779fc96b9371b066747a01574aa5",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) ai-weekly-summary — dark 1`] = `
{
  "lines": 34,
  "modals": 1,
  "sha256": "fce9f3d59912b6a5d2cd97644b7cb22169d460a8b411996d1b1711f35da4cf47",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) ai-weekly-summary — light 1`] = `
{
  "lines": 34,
  "modals": 1,
  "sha256": "84429e39069a17c09e6cba95e5fa2c1b75c0db91b42e2b9345302d9dd5a9a2bb",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) cash-flow-setup — dark 1`] = `
{
  "lines": 41,
  "modals": 1,
  "sha256": "4ea0b5f041f4156a7600274a1a551420f90331461722728d499e011c11d7c6c6",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) cash-flow-setup — light 1`] = `
{
  "lines": 41,
  "modals": 1,
  "sha256": "bab7f526a67ef53720daa3a76534b058fdca0be1b1c58f18ef9da9d541a5c1c2",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) client-paywall-rfp-post — dark 1`] = `
{
  "lines": 173,
  "modals": 1,
  "sha256": "613f4239ca6ec451ae008113a9f027cd003efa58e7c67beb8f73ce69e169c4a9",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) client-paywall-rfp-post — light 1`] = `
{
  "lines": 173,
  "modals": 1,
  "sha256": "536ed60ccaafba7f751c8f43bef33e6cc2f6281fb1cd5a414aa44da94721de05",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) client-paywall-subscription — dark 1`] = `
{
  "lines": 173,
  "modals": 1,
  "sha256": "91cecf5b1771acf41ce3c456e705018c47bdb8619d41d137086631ed1a6d91cc",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) client-paywall-subscription — light 1`] = `
{
  "lines": 173,
  "modals": 1,
  "sha256": "0cbeab0030f7c8e4bc84886b0da6ae722dedba8c6862e614347864549b66acfe",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) estimate-comparison — dark 1`] = `
{
  "lines": 36,
  "modals": 1,
  "sha256": "005982e62094999303aa1f6d214a034c8e5e4d4fced833344a46ed9e52256b1a",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) estimate-comparison — light 1`] = `
{
  "lines": 36,
  "modals": 1,
  "sha256": "48d140c2fabca7efc7f8d1bc5bf5095895654013af77a4cacad9878d41697c03",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) material-ai-estimate — dark 1`] = `
{
  "lines": 60,
  "modals": 1,
  "sha256": "c071c913de57734f56b06332246dda81700723d585531d356e88cce57b85bd73",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) material-ai-estimate — light 1`] = `
{
  "lines": 60,
  "modals": 1,
  "sha256": "5aadccbb5d6bcb87a876644b57511a5e021c68c1ed9c3c2527b114acf7b29eaf",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) productivity-calculator — dark 1`] = `
{
  "lines": 623,
  "modals": 1,
  "sha256": "a7d588b483cefbaf31127b77a168f6f49ccd9f244bd147a1878c8c60ce5d5e61",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) productivity-calculator — light 1`] = `
{
  "lines": 623,
  "modals": 1,
  "sha256": "0d0962ed31050cf7f7f53b88524e3f72dbce83bfb3870d84017ae1510358963d",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) rfi-triage — dark 1`] = `
{
  "lines": 29,
  "modals": 1,
  "sha256": "0dec98c55683da045dee6d320d4f945e38d74775878b87de112139ceb0113154",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) rfi-triage — light 1`] = `
{
  "lines": 29,
  "modals": 1,
  "sha256": "2713c777e36275ecfd8a352822bf7e5c94a29e2f9f4693ec22aabd246c2810f0",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) square-foot-estimator — dark 1`] = `
{
  "lines": 494,
  "modals": 1,
  "sha256": "1ee1629cc49ab33fb078a856411efe8189802f7837e4a1c6fd8951fc0beb0ca7",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) square-foot-estimator — light 1`] = `
{
  "lines": 494,
  "modals": 1,
  "sha256": "262c70cd9a3405e2df47c1e5899342f8b055b8d9b26b97842a55732fab0fb58a",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) takeoff-page-inspector — dark 1`] = `
{
  "lines": 120,
  "modals": 1,
  "sha256": "ad21db9e8aec99f7c6173f7f58c4164eb59d0dbad4174a281fa252eecfc66a27",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) takeoff-page-inspector — light 1`] = `
{
  "lines": 120,
  "modals": 1,
  "sha256": "c2b02892efd4b0b16e114ccf4461cb82b33fca3a0624dcc5d80050c3f99afb5f",
}
`;
